Fix z-index on scoreCard.

--- a/docroot/sites/all/themes/custom/nas/css/app.css
+++ b/docroot/sites/all/themes/custom/nas/css/app.css
@@ -18234,6 +18234,7 @@ input[type="checkbox"].np-checkbox:checked + label:before {
     -ms-flex-pack: justify;
     -webkit-justify-content: space-between;
     justify-content: space-between;
+    z-index: 0;
   }
 }
 .ct-item-nav-conservation .menu-wrap ul.open > .true {
